--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Lilita+One&family=Playwrite+CU:wght@100..400&display=swap');
 $primario: #9c2780;
 $primarioOscuro: #891190;
 $secundario: #ffce00;
 $secundarioOscuro: rgb(233,287,2);
 $blanco: #fff;
 $negro: #000;
-$fuentePrincipal: 'Staatliches', cursive;
+$fuentePrincipal: "Lilita One", sans-serif;
